--- a/content/blog/content-automation-engine.mdx
+++ b/content/blog/content-automation-engine.mdx
@@ -3,6 +3,7 @@ title: "Building a Content Automation Engine That Produces 3,500+ Social Media A
 date: "2025-02-10"
 excerpt: "How I built a multi-platform content engine that generates Instagram cards, Pinterest pins, and Twitter threads from a single data source using Puppeteer and platform APIs."
 readingTime: "9 min read"
+tags: ["Automation", "Puppeteer", "Social Media", "Content", "APIs"]
 ---
 
 ContentForge is a Node.js automation engine that takes a single TypeScript data source of spiritual content (65 Bhairava forms, 108+ stotras, 31 stories, and a collection of articles) and produces over 3,500 ready-to-publish social media assets across Instagram, Pinterest, Twitter/X, and Facebook. It renders images with Puppeteer, writes platform-specific captions, schedules posts with rate limiting, and handles publishing through each platform's API.
