--- a/content/blog/dual-payment-system.mdx
+++ b/content/blog/dual-payment-system.mdx
@@ -3,6 +3,7 @@ title: "How I Built a Dual Payment System for India and International Users"
 date: "2025-01-15"
 excerpt: "Integrating Stripe and Instamojo with geo-based routing, webhook verification, and unified order tracking in a single Express 5 backend."
 readingTime: "7 min read"
+tags: ["Stripe", "Payments", "Express", "Node.js", "GeoIP"]
 ---
 
 Bhairav Aaradhyaa is a spiritual tech platform I built. One of its paid features is a Life Purpose reading, priced at £21 GBP for international users and ₹251 INR for users in India. Two completely different price points, two completely different payment gateways, one backend. Here is how I wired it all together.
