--- a/content/blog/puppeteer-seo-pipeline.mdx
+++ b/content/blog/puppeteer-seo-pipeline.mdx
@@ -3,6 +3,7 @@ title: "Pre-rendering 192 Pages Without Next.js: A Puppeteer SEO Approach"
 date: "2025-01-08"
 excerpt: "How I took a React 19 SPA from zero Google indexing to full coverage by building a Puppeteer pipeline that renders 192 pages to static HTML."
 readingTime: "6 min read"
+tags: ["SEO", "Puppeteer", "React", "Pre-rendering", "Performance"]
 ---
 
 Bhairav Aaradhyaa is a spiritual content platform built with React 19 as a single-page application. The site holds a serious amount of content: 65 Bhairava divine forms, 108+ stotras, 31 stories, pilgrimage guides, articles, and more. The frontend data files alone total over 1.7MB (forms.ts at 147KB, stotras.ts at 550KB, stories.ts at 358KB, plus several others). All of it rendered client-side.
