--- a/content/blog/sveltekit-vs-react.mdx
+++ b/content/blog/sveltekit-vs-react.mdx
@@ -3,6 +3,7 @@ title: "Why I Chose SvelteKit Over React for a Real-Time Chat App"
 date: "2024-12-05"
 excerpt: "SvelteKit's reactive stores, Fastify's throughput, and Groq's inference speed made HELEC's real-time AI chat significantly cleaner to build than a React equivalent."
 readingTime: "6 min read"
+tags: ["SvelteKit", "React", "WebSockets", "Real-time", "Architecture"]
 ---
 
 I have built plenty of things in React. It is the framework I reach for by default. So when I started building HELEC, an AI-powered customer support chat for an electronics company, React was the obvious choice.
